# mascoty-taurine

./: .gitignore  LICENSE  Makefile  README.md  README_tmp.html  canvas.html  index.html  package.json  vite.config.ts  vite.config.ts.timestamp-1678619727238.mjs
.github/workflows/: build.yaml  format.yaml  linux-bash.yaml  linux-build.yaml  linux-perl.yaml  linux-release.yaml  linux-test.yaml  macos-bash.yaml  macos-build.yaml  macos-perl.yaml  macos-release.yaml  macos-test.yaml  test.yaml  windows-build.yaml  windows-release.yaml  windows-test.yaml
raw-mascot/neutral/yr/: CONF_yr.mascot
scripts/: setup.pl  setup.sh
src/: App.css  App.tsx  Projects.tsx  main.tsx  mainCanvas.tsx  style.css
src-tauri/: .gitignore  Cargo.toml  Info.plist  conf.json  tauri.conf.json
src-tauri/icons/: masc-logo.icns  mascoty.icns  mascoty128.icns
src-tauri/src/: commands.rs  devices.rs  emotion.rs  emotions.rs  input.rs  lib.rs  main.rs  mascot.rs  tests.rs  utils.rs
src-tauri/src/config/: config.yaml  mod.rs  tests.rs
src-tauri/src/mascot/: emotions.rs  eyes.rs  lips.rs  mod.rs
src-tauri/tests/: ml_test.rs  utils_test.rs
src/components/emotions/: EmotionPart.tsx  EmotionsSelection.tsx
src/components/logic/: EEmotion.ts  EPart.ts  IConf.ts  IEmotion.ts  IMascot.ts  IMascotData.ts  IPart.ts  IProject.ts  ISave.ts
src/components/mascot/: MascotCanvas.tsx  MascotPart.tsx  ShadowCanvas.tsx  ShadowPart.tsx
src/components/modals/: EmotionAdd.tsx  PartAdd.tsx  Proceed.tsx  ProjectAdd.tsx  ProjectAddScrap.tsx
src/components/parts/: PartPart.tsx  PartsSelection.tsx
src/components/settings/: BackgroundColorPicker.tsx  CamSelection.tsx  FPSSelection.tsx  MicMinMaxDisplay.tsx  MicSelection.tsx  ShakeSettings.tsx  Slider.tsx  TwoSlider.tsx
src/utils/: Colors.ts  Colors.tsx  Commands.ts  Config.ts  DummyMascot.ts  EDescriptor.ts  EPartDescriptor.ts  MascotState.ts  MuiTheme.tsx  Router.ts  Save.ts  Store.ts  TextToColor.ts  UUIDGen.ts  counter.js  counterSlice.ts
src/utils/redux_state/: BackgroundSlice.ts  Store.ts  StoreHooks.ts
test-projects/test/: CONF_test.mascot
