[package]
name = "mascoty-taurine"
version = "0.1.0"
description = "Backend of Mascoty Taurine app"
authors = [ "offluck" ]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
serde = { version = "1.0.152", features = [ "derive" ] }
serde_json = "1.0.91"
serde_yaml = "0.9.17"

log = "0.4.17"
simple_logger = "4.0.0"

tauri = { version = "1.2", features = ["dialog-all", "fs-all", "path-all", "protocol-asset", "shell-open", "window-set-title"] }
rand = "0.8.4"

[dependencies.nokhwa]
version = "0.10.3"
features = [
    "input-avfoundation",
    "input-msmf",
    "output-wgpu",
]

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
