[package]
name = "mascoty-taurine"
version = "0.1.0"
description = "Backend of Mascoty Taurine app"
authors = ["offluck"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

log = "0.4"
simple_logger = "4.0"

rand = "0.8"

tch = "0.10"
cpal = "0.15"
anyhow = "1.0"

[dependencies.tauri]
version = "1.2"
features = [ "window-all",
    "dialog-all",
    "fs-copy-file",
    "fs-create-dir",
    "fs-exists",
    "fs-read-dir",
    "fs-read-file",
    "fs-remove-dir",
    "fs-remove-file",
    "fs-write-file",
    "global-shortcut-all",
    "path-all",
    "protocol-asset",
    "shell-open",
]

[dependencies.tokio]
version = "1.27"
features = ["sync"]

[dependencies.nokhwa]
version = "0.10"
features = ["input-native", "output-wgpu"]

[dependencies.image]
version = "0.24"
default-features = true
features = ["jpeg"]

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
